<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="30dip">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="3sp"
            android:gravity="center"
            android:stretchColumns="1">

            <TableRow>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.wrapp.floatlabelededittext.FloatLabeledEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/username"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/line_et_bg"
                        android:hint="@string/register_name_hint"
                        android:singleLine="true" />
                    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:padding="5dip"></TableRow>

            <TableRow>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/old_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/old_passwd_hint"
                    android:background="@drawable/line_et_bg"
                    android:inputType="textPassword"
                    android:singleLine="true" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:padding="5dip"></TableRow>

            <TableRow>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <com.wrapp.floatlabelededittext.FloatLabeledEditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/line_et_bg"
                    android:hint="@string/new_passwd_hint"
                    android:inputType="textPassword"
                    android:singleLine="true" />
                </com.wrapp.floatlabelededittext.FloatLabeledEditText>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:padding="5dip"></TableRow>

            <Button
                android:id="@+id/register_button"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="0sp"
                android:layout_marginRight="0sp"
                android:layout_marginTop="20dip"
                android:background="@layout/register_button"
                android:textColor="@android:color/white"
                android:text="@string/submit"
                android:textStyle="bold" />

        </TableLayout>

        <LinearLayout
            android:id="@+id/main_cinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dip"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="3sp"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_image_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="提交修改密码请求"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="17dip"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>