<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:gravity="top"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dynamic_item_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dip"
        android:adjustViewBounds="true"
        android:background="#FFFFFFFF"
        android:contentDescription="@string/name" />

    <LinearLayout
        android:id="@+id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dip"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="30dip">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="3sp"
            android:stretchColumns="1">

            <TableRow android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.wrapp.floatlabelededittext.FloatLabeledEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/line_et_bg"
                            android:hint="@string/name"
                            android:singleLine="true" />
                    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:padding="5dip"></TableRow>

            <TableRow android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.wrapp.floatlabelededittext.FloatLabeledEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/line_et_bg"
                            android:hint="@string/secret"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:gravity="center_horizontal"
                android:padding="5dip"></TableRow>

            <Button
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="0sp"
                android:layout_marginRight="0sp"
                android:layout_marginTop="20dip"
                android:background="@layout/register_button"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </TableLayout>

        <LinearLayout
            android:id="@+id/main_vinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3sp"
            android:layout_marginRight="3sp"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_image_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginTop="15dip"
                android:gravity="center"
                android:text="@string/register_descripe"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/main_vinearr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3sp"
                android:layout_marginRight="3sp"
                android:gravity="top"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/forget_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginTop="8dip"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="忘记密码"
                    android:textColor="#FF333333"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/email_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginTop="8dip"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="绑定邮箱"
                    android:textColor="#FF333333"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/register_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:background="@layout/register_button"
            android:gravity="center"
            android:text="用户注册"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentLeft = "true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/jump"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:background="@layout/register_button"
            android:gravity="center"
            android:text="开始游戏"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentRight = "true"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>